# cf_ai_app

./: .env.example  .gitignore  PROMPTS.md  README.md  TADATA_INTEGRATION.md  TADATA_QUICKSTART.md  build-backend.sh  package-lock.json  package.json
cloudflare/: package-lock.json  package.json  wrangler.jsonc
cloudflare/src/: index.ts
src/: App.tsx  Overlay.tsx  ResponseWindow.tsx  main.tsx
src-python/: PROJECT_STRUCTURE.md  README.md  agent.py  cloudflare_client.py  gradient_agent.py  main.py  requirements.txt  tool_adapter.py
src-python/agents/: coordinator.py  summarize.py  terminal_cmd.py
src-python/deprecated/: plugin_selector.py
src-python/routes/: agent.py  health.py  hotkey.py  integrations.py  rag.py  settings.py
src-python/tools/: integrations.py  rag.py  tadata.py
src-python/utils/: __init__.py  keyboard_monitor.py
src-tauri/: Cargo.toml  Pointer_Info.plist  entitlements.plist  tauri.conf.json
src-tauri/src/: cloudflare.rs  main.rs
src/components/: CalendarPanel.tsx  CloudflarePanel.tsx  EnvVarsPanel.tsx  HotkeyPanel.tsx  OverlayInput.tsx  RagPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StoragePanel.tsx  TadataPanel.tsx  Toast.tsx
src/hooks/: useSettings.ts
src/styles/: theme.ts
src/types/: index.ts
