[package]
name = "arrow"
version = "0.0.0"
description = "Arrow - AI Anywhere"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cocoa = "0.25"
objc = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }

[features]
default = []
